Fix issue #1553: An errornous __length_hint__ can make list() raise a SystemError.